nk-k01/secret.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
