nk-k01/nk-express-book.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nk-express-books
  namespace: staging
  labels:
    app: nk-express-books
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nk-express-books
  template:
    metadata:
      labels:
        app: nk-express-books
    spec:
      imagePullSecrets:
      - name: nk-registry-key
      containers:
      - name: nk-helm-kube
        image: nankim001.azurecr.io/nk-helm-kube:latest
        imagePullPolicy: Always
        ports:
        - name: default
          containerPort: 5000
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 300m
     
      
---
apiVersion: v1
kind: Service
metadata:
  name: nk-express-books
  namespace: staging
spec:
  selector:
    app: nk-express-books
  ports:
  - protocol: TCP
    port: 5000
    # targetPort: 5000
    name: http
  type: LoadBalancer
