nk-k01/nk-express.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nk-express
  namespace: staging
  labels:
    app: nk-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nk-express
  template:
    metadata:
      labels:
        app: nk-express
    spec:
      containers:
      - name: nk-express
        image: nankim/nk-express
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 300m
      
---
apiVersion: v1
kind: Service
metadata:
  name: nk-express
  namespace: staging
spec:
  selector:
    app: nk-express
  ports:
  - protocol: TCP
    port: 3000
    name: http
  type: LoadBalancer
