nk-k01/nk-react.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nk-frontend
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nk-frontend
  template:
    metadata:
      labels:
        app: nk-frontend
    spec:
      containers:
      - name: nk-frontend
        image: nankim/nk-react
        ports:
        - name: http
          containerPort: 3000
        resources:
          requests:
            memory: 100Mi
            cpu: 300m
          limits:
            memory: 128Mi
            cpu: 500m
       

---
apiVersion: v1
kind: Service
metadata:
  name: nk-frontend
  namespace: staging
spec:
  selector:
    app: nk-frontend
  ports:
  - protocol: TCP
    port: 3000
    name: http
  type: LoadBalancer
