nk-k01/nk-nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nk-express-ingress
  namespace: staging
  annotations:
    # nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
  labels:
    name: nk-express-ingress
spec: 
  defaultBackend:
    resource:
      apiGroup: k8s.example.com
      kind: StorageBucket
      name: staging
  rules:
  - host: nk-express-host.com
    http:
      paths:
      - pathType: Prefix
        path: /books(/|$)(.*)
        backend:
          service:
            name: nk-express-books
            port: 
              number: 5000

      - pathType: Prefix
        path: /auths(/|$)(.*)
        backend:
          service:
            name: nk-express
            port:
             number: 3000

# For multiple urls just use / to refer to your services urls
